--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -19,10 +19,11 @@
 name: Snyk Security
 
 on:
+  workflow_call:
   push:
-    branches: ["main" ]
+    branches:
+      - main
   pull_request:
-    branches: ["main"]
 
 permissions:
   contents: read
